LMS-39: Correct to use

--- a/App_Web/src/main/resources/templates/request/request.html
+++ b/App_Web/src/main/resources/templates/request/request.html
@@ -23,7 +23,7 @@
             </tr>
             <tr>
                 <td>Curse</td>
-<!--                <td><input type="text" th:value=${request.course.title} disabled></td>-->
+                <td><input type="text" th:value=${request.course.title} disabled></td>
             </tr>
             <tr>
                 <td>Status</td>
