--- a/App_Web/src/main/resources/templates/request/update_request.html
+++ b/App_Web/src/main/resources/templates/request/update_request.html
@@ -23,8 +23,8 @@
                 </tr>
                 <tr>
                     <td>Curse</td>
-<!--                    <td><input type="text" th:value=*{course.title} disabled></td>-->
-<!--                    <input type="hidden" name="course.id" th:value="*{course.id}">-->
+                    <td><input type="text" th:value=*{course.title} disabled></td>
+                    <input type="hidden" name="course.id" th:value="*{course.id}">
                 </tr>
                 <tr>
                     <td>Status</td>
