--- a/App_Web/src/main/resources/templates/request/request.html
+++ b/App_Web/src/main/resources/templates/request/request.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Request</title>
@@ -12,7 +12,7 @@
     <div class="left-side-area">
         <h1 class="header">View</h1>
         <h2>Request number: <span th:text="${request.id}"></span></h2>
-        <a th:href="@{/requests/update/__${request.id}__}" class="button-active">Edit request</a>
+        <a th:href="@{/requests/update/__${request.id}__}" sec:authorize="hasAnyAuthority('MANAGER')" class="button-active">Edit request</a>
     </div>
     <div class="main-area">
         <table>
