--- a/App_Web/src/main/resources/templates/request/update_request.html
+++ b/App_Web/src/main/resources/templates/request/update_request.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Edit request</title>
@@ -8,7 +8,7 @@
 </head>
 <body>
 <nav th:replace="~{plugins/menu::menu}"></nav>
-<div class="main">
+<div class="main" sec:authorize="hasAnyAuthority('MANAGER')">
     <div class="left-side-area">
         <h1 class="header">Update</h1>
         <h2>Request number: <span th:text="${request.id}"></span></h2>
@@ -77,6 +77,12 @@
             </table>
             <input type="submit" name="submit" value="Save" class="button-active"/>
         </form>
+    </div>
+</div>
+<div class="main" sec:authorize="hasAnyAuthority('STUDENT')">
+    <div class="left-side-area">
+        <h1 class="header">Update</h1>
+        <h2>Student go on you Pages! -> <span><a href="/" class="button-active">HOME</a></span></h2>
     </div>
 </div>
 </body>
