--- a/App_Web/src/main/resources/templates/course/courses.html
+++ b/App_Web/src/main/resources/templates/course/courses.html
@@ -12,7 +12,7 @@
 <div class="main">
     <div class="left-side-area">
         <h1 class="header">Courses</h1>
-        <h2 class="subheader">List<br> of all courses</h2>
+        <h2 class="subheader" th:text="#{List_of_courses.text}">List <br> of all courses</h2>
         <a sec:authorize="hasAnyAuthority('MANAGER')" href="/courses/createForm" class="button-active">Create</a>
     </div>
     <div class="main-area">
