LMS-31: H1 rename capitalized

--- a/App_Web/src/main/resources/templates/create_homework.html
+++ b/App_Web/src/main/resources/templates/create_homework.html
@@ -10,7 +10,7 @@
 <nav th:replace="~{plugins/menu::menu}"></nav>
 <div class="main">
     <div class="left-side-area">
-        <h1 class="header">Create homework</h1>
+        <h1 class="header">Create Homework</h1>
         <h1 class="subheader">Enter new data</h1>
     </div>
     <div class="main-area">
