--- a/App_Web/src/main/resources/templates/lesson/update_lesson.html
+++ b/App_Web/src/main/resources/templates/lesson/update_lesson.html
@@ -9,7 +9,7 @@
 <nav th:replace="~{plugins/menu::menu}"></nav>
 <div class="main">
     <div class="left-side-area">
-        <h1 class="header">Edit lesson</h1>
+        <h1 class="header">Edit Lesson</h1>
         <h2 class="subheader">Changing lesson information</h2>
 
     </div>
