--- a/App_Web/src/main/resources/templates/update_homework.html
+++ b/App_Web/src/main/resources/templates/update_homework.html
@@ -10,7 +10,7 @@
 <nav th:replace="~{plugins/menu::menu}"></nav>
 <div class="main">
     <div class="left-side-area">
-        <h1 class="header">Update homework</h1>
+        <h1 class="header">Update Homework</h1>
         <h2 class="subheader">Change homework<br> information</h2>
     </div>
     <div class="main-area">
