--- a/App_Web/src/main/resources/templates/registration.html
+++ b/App_Web/src/main/resources/templates/registration.html
@@ -11,7 +11,7 @@
 <nav th:replace="~{plugins/menu::menu}"></nav>
 <div class="main">
     <div class="left-side-area">
-        <h1 class="header">Create user</h1>
+        <h1 class="header">Create User</h1>
         <h2 class="subheader">Complete your user profile</h2>
     </div>
     <div class="main-area">
