--- a/App_Web/src/main/resources/templates/homeworks.html
+++ b/App_Web/src/main/resources/templates/homeworks.html
@@ -15,7 +15,7 @@
         <h3><a th:href="@{/homeworks/create}" class="button">Create homework</a></h3>
     </div>
     <div class="main-area">
-        <div th:insert="~{plugins/pagination::pagination}" th:with="firstVer=${courses}"></div>
+        <div th:insert="~{plugins/pagination::pagination}" th:with="firstVer=${homeworks}"></div>
         <table class="table">
             <h2>Homeworks list</h2>
             <tr class="table-header">
