--- a/App_Web/src/main/resources/templates/create_homework.html
+++ b/App_Web/src/main/resources/templates/create_homework.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>create homework page</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/main.css" th:href="@{/css/main.css}">
+    <link rel="stylesheet" type="text/css" href="/css/main.css" th:href="@{/css/main.css}">
 </head>
 <body>
 <nav th:replace="~{plugins/menu::menu}"></nav>
@@ -17,18 +17,20 @@
         <form action="/homeworks/create" method="post">
             <table>
                 <tr>
-                    <td class="text" type="text">Student id</td>
-                    <td><input type="text" name="student.id" th:value="${2}"></td>
-                    <!--FIXME:remove hardcoded id from session-->
+                    <td class="text" type="hidden"></td>
+                    <td><input type="hidden" name="student.id" th:value="${user.id}"></td>
                 </tr>
                 <tr>
                     <td class="text">Comment</td>
                     <td><input type="text" name="comment"></td>
                 </tr>
+                <tr>
+                    <td class="text">Add file</td>
+                    <td><input type="file" name="fileLink.link" value="homework.fileLink.link"></td>
+                </tr>
 
             </table>
-            <input type="submit" value="Submit">
-            <input type="reset" value="Reset">
+            <button type="submit" class="button-active"> Create</button>
         </form>
     </div>
 </div>
