LMS-51: comment type "textarea" in create_homework.html

--- a/App_Web/src/main/resources/templates/create_homework.html
+++ b/App_Web/src/main/resources/templates/create_homework.html
@@ -22,7 +22,8 @@
                 </tr>
                 <tr>
                     <td class="text">Comment</td>
-                    <td><input type="text" name="comment"></td>
+                    <td><textarea type="text" name="comment" class="scrolling"></textarea></td>
+
                 </tr>
                 <tr>
                     <td class="text">Add file</td>
