--- a/App_Web/src/main/resources/templates/plugins/menu.html
+++ b/App_Web/src/main/resources/templates/plugins/menu.html
@@ -6,9 +6,13 @@
         <p sec:authorize="hasAuthority('MANAGER')"><a class="text" href="/users">Users</a></p>
         <p><a class="text" th:text="#{Courses.text}" href="/courses">Courses</a></p>
         <p sec:authorize="hasAnyAuthority('STUDENT', 'TRAINER')"><a class="text" href="/courses">My courses</a></p>
-        <p sec:authorize="hasAnyAuthority('MANAGER')"><a class="text" th:text="#{Requests.text}" href="/requests">Requests</a></p>
-        <p sec:authorize="hasAnyAuthority('STUDENT')"><a class="text" th:text="#{My_Requests.text}" th:href="@{/requests/student/__${#authentication.name}__}">My requests</a></p>
-        <p sec:authorize="hasAnyAuthority('STUDENT')"><a class="text" th:href="@{/users/personal}">Personal Page</a></p>
+        <p sec:authorize="hasAnyAuthority('MANAGER')"><a class="text" th:text="#{Requests.text}" href="/requests">Requests</a>
+        </p>
+        <p sec:authorize="hasAnyAuthority('STUDENT')"><a class="text" th:text="#{My_Requests.text}"
+                                                         th:href="@{/requests/student/__${#authentication.name}__}">My
+            requests</a></p>
+        <p sec:authorize="hasAnyAuthority('STUDENT')"><a class="text" th:text="#{Personal_Page.text}"
+                                                         th:href="@{/users/personal}">Personal Page</a></p>
     </nav>
     <nav class="menu-right">
         <p><a class="text" href="/?language=RU" th:text="#{ru.text}"></a></p>
