--- a/App_Web/src/main/resources/templates/homeworks.html
+++ b/App_Web/src/main/resources/templates/homeworks.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/main.css">
@@ -12,7 +12,7 @@
     <div class="left-side-area">
         <h1 class="header">Homeworks</h1>
         <h2 class="subheader">List of all homeworks</h2>
-        <h3><a th:href="@{/homeworks/create}" class="button">Create homework</a></h3>
+        <h3><a th:href="@{/homeworks/create}" class="button-active">Create homework</a></h3>
     </div>
     <div class="main-area">
         <div th:insert="~{plugins/pagination::pagination}" th:with="firstVer=${homeworks}"></div>
@@ -21,7 +21,7 @@
             <tr class="table-header">
                 <th></th>
                 <th></th>
-                <th></th>
+                <th sec:authorize="hasAnyAuthority('MANAGER', 'TRAINER')"></th>
                 <th>Users</th>
                 <th>Comment</th>
                 <th>File link</th>
@@ -38,7 +38,7 @@
                         <i class="fa-solid fa-file-pen" title="Edit"></i>
                     </a>
                 </td>
-                <td>
+                <td sec:authorize="hasAnyAuthority('MANAGER', 'TRAINER')">
                     <a th:href="@{/homeworks/delete/__*{id}__}" class="button">
                         <i class="fa-solid fa-trash-can" title="Delete"></i>
                     </a>
