LMS-52: Change visibility for role & Is_active

--- a/App_Web/src/main/resources/templates/user.html
+++ b/App_Web/src/main/resources/templates/user.html
@@ -41,11 +41,11 @@
                 <td class="text-left-column">Social media</td>
                 <td><input type="text" th:value=${user.socialMedia} disabled></td>
             </tr>
-            <tr>
+            <tr sec:authorize="hasAnyAuthority('MANAGER')">
                 <td class="text-left-column">Role</td>
                 <td><input type="text" th:value=${user.role} disabled></td>
             </tr>
-            <tr>
+            <tr sec:authorize="hasAnyAuthority('MANAGER')">
                 <td class="text-left-column">Is active</td>
                 <td><input type="text" th:value=${user.isActive} disabled></td>
             </tr>
