LMS-50 Refactored translation of index.html

--- a/App_Web/src/main/resources/templates/index.html
+++ b/App_Web/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>LMS - Main Page</title>
+    <title th:text="#{Title_LMS_Main.text}">LMS - Main Page</title>
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
