--- a/App_Web/src/main/resources/templates/plugins/pagination.html
+++ b/App_Web/src/main/resources/templates/plugins/pagination.html
@@ -1,10 +1,12 @@
-<div class="pagination" th:fragment="pagination" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-    <div class="hidden meta" th:attr="first=${firstVer.first},last=${firstVer.last},total=${firstVer.totalPages},number=${firstVer.number},url=${#ctx.springRequestContext.requestUri}"></div>
-    <button class="first">First</button>
-    <button class="prev">Prev</button>
+<div class="pagination" th:fragment="pagination" xmlns="http://www.w3.org/1999/xhtml"
+     xmlns:th="http://www.thymeleaf.org">
+    <div class="hidden meta"
+         th:attr="first=${firstVer.first},last=${firstVer.last},total=${firstVer.totalPages},number=${firstVer.number},url=${#ctx.springRequestContext.requestUri}"></div>
+    <button class="first" th:text="#{First.text}">First</button>
+    <button class="prev" th:text="#{Prev.text}">Prev</button>
     <button class="current"></button>
-    <button class="next">Next</button>
-    <button class="last">Last</button>
+    <button class="next" th:text="#{Next.text}">Next</button>
+    <button class="last" th:text="#{Last.text}">Last</button>
     <script defer src="/js/jquery-3.6.1.js"></script>
     <script defer src="/js/pagination.js"></script>
 </div>
