--- a/App_Web/src/main/resources/templates/plugins/menu.html
+++ b/App_Web/src/main/resources/templates/plugins/menu.html
@@ -5,7 +5,7 @@
         <p><a class="text" th:text="#{Home.text}" href="/">Home</a></p>
         <p sec:authorize="hasAuthority('MANAGER')"><a class="text" href="/users">Users</a></p>
         <p><a class="text" th:text="#{Courses.text}" href="/courses">Courses</a></p>
-        <p sec:authorize="hasAnyAuthority('STUDENT', 'TRAINER')"><a class="text" href="/courses">My courses</a></p>
+        <p sec:authorize="hasAnyAuthority('STUDENT', 'TRAINER')"><a class="text" href="/courses/student">My courses</a></p>
         <p sec:authorize="hasAnyAuthority('MANAGER')"><a class="text" th:text="#{Requests.text}" href="/requests">Requests</a>
         </p>
         <p sec:authorize="hasAnyAuthority('STUDENT')"><a class="text" th:text="#{My_Requests.text}"
