--- a/App_Web/src/main/resources/templates/plugins/menu.html
+++ b/App_Web/src/main/resources/templates/plugins/menu.html
@@ -11,7 +11,7 @@
         <p sec:authorize="hasAnyAuthority('STUDENT')"><a class="text" th:text="#{My_Requests.text}"
                                                          th:href="@{/requests/student/__${#authentication.name}__}">My
             requests</a></p>
-        <p sec:authorize="hasAnyAuthority('STUDENT')"><a class="text" th:text="#{Personal_Page.text}"
+        <p><a class="text" th:text="#{Personal_Page.text}"
                                                          th:href="@{/users/personal}">Personal Page</a></p>
     </nav>
     <nav class="menu-right">
