LMS-57: added MANAGER to security

--- a/App_Web/src/main/resources/templates/lesson/lesson.html
+++ b/App_Web/src/main/resources/templates/lesson/lesson.html
@@ -52,7 +52,7 @@
             </tr>
         </table>
         <a th:href="'/courses/' + ${id}" class="button-active">Back</a>
-        <a th:href="'/lessons/updateForm/' + ${lesson.id}" sec:authorize="hasAnyAuthority('TRAINER')"
+        <a th:href="'/lessons/updateForm/' + ${lesson.id}" sec:authorize="hasAnyAuthority('TRAINER', 'MANAGER')"
            class="button-active">Edit</a>
     </div>
 </div>
