LMS-57: full name read only now, some changes to update homework have been made

--- a/App_Web/src/main/resources/templates/update_homework.html
+++ b/App_Web/src/main/resources/templates/update_homework.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Update homework</title>
@@ -16,11 +15,11 @@
     <div class="main-area">
         <form th:action="'/homeworks/update/' + ${homework.id}" method="post">
             <table>
+
                 <tr>
-                    <td class="text-left-column">Full name</td>
-                    <td><input type="text" th:value="${homework.student.firstName} + ' '
-                        + ${homework.student.lastName} + ' '
-                        + ${homework.student.patronymicName} "></td>
+                    <td class="text-left-column">Homework of</td>
+                    <td><input type="text" th:value="${homework.student.firstName} + ' ' +
+                    ${homework.student.lastName}" disabled></td>
                 </tr>
                 <tr>
                     <td class="text-left-column" hidden>Student ID</td>
@@ -29,6 +28,14 @@
                 <tr>
                     <td class="text-left-column">Comment</td>
                     <td><input type="text" th:value=${homework.comment} name="comment"></td>
+                </tr>
+                <!--<tr>
+                    <td class="text-left-column">Filelink (temp info)</td>
+                    <td><input type="text" th:value=${homework.fileLink.link}></td>
+                </tr>FIXME: add possibility change filLink or use existing-->
+                <tr>
+                    <td class="text">Add file</td>
+                    <td><input type="file" name="fileLink.link" value="homework.fileLink.link"></td>
                 </tr>
                 <tr>
                     <td class="text-left-column">Mark</td>
