LMS-57: add buttons "to homeworks"

--- a/App_Web/src/main/resources/templates/create_homework.html
+++ b/App_Web/src/main/resources/templates/create_homework.html
@@ -31,6 +31,7 @@
                 </tr>
 
             </table>
+            <a th:href="'/homeworks/student/' + ${homework.student.id}" class="button-active">To homeworks</a>
             <button type="submit" class="button-active"> Create</button>
         </form>
     </div>
